fix the style and button z-index.PTR-2225

--- a/src/components/mascot/Mascot.less
+++ b/src/components/mascot/Mascot.less
@@ -4,7 +4,7 @@
   left: 0;
   height: 201px;
   width: 120px;
-  z-index: 20;
+  z-index: 999;
   * {
     font-family: 'PT Sans', sans-serif;
   }
